--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Memorama</string>
+    <string name="neutral_answer">Entendido</string>
+    <string name="positive_answer">Registrar</string>
+    <string name="negative_answer">Cancelar</string>
 </resources>
